att: media, resultados em novo csv

--- a/scripts/statistics.ipynb
+++ b/scripts/statistics.ipynb
@@ -4914,8 +4914,8 @@
    ],
    "source": [
     "grouped_df = df.groupby('same_face_id').agg({\n",
-    "    'sex_decfunc_avg': 'mean',  # Calcular a média do sex_decfunc_avg\n",
-    "    'age_label_avg': 'mean'   # Calcular a média do age_decfunc_avg\n",
+    "    'sex_decfunc_avg': 'mean',  # media do sex_decfunc_avg\n",
+    "    'age_label_avg': 'mean'   # media do age_decfunc_avg\n",
     "}).reset_index()\n",
     "\n",
     "print(tabulate(grouped_df, headers='keys', tablefmt='pretty'))"
